@@ -29,7 +29,7 @@ int main(int argc, char* argv[]) {
    int doMore = 1;
    char* device = NULL;
 
-   printf("GPT fdisk (gdisk) version 0.5.1-pre2\n\n");
+   printf("GPT fdisk (gdisk) version 0.5.1-pre3\n\n");
 
     if (argc == 2) { // basic usage
       if (SizesOK()) {
@@ -311,7 +311,7 @@ void ExpertsMenu(char* filename, struct GPTData* theGPT) {
             break;
          case 'e': case 'E':
             printf("Relocating backup data structures to the end of the disk\n");
-            theGPT->FixSecondHeaderLocation();
+            theGPT->MoveSecondHeaderToEnd();
             break;
          case 'g': case 'G':
             printf("Enter the disk's unique GUID:\n");
